<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 모임 생성 페이지 -->
    <string name="create_group_title">모임 생성</string>
    <string name="create_group_description">모임에 친구를 추가해 보세요!</string>
    <string name="create_group_name_menu">이름</string>
    <string name="create_group_name_value">모임 이름</string>
    <string name="create_group_category_menu">목적</string>
    <string name="create_group_member_menu">멤버 추가</string>
    <string name="create_group_add_button">+ 추가</string>
    <string name="create_group_button">모임 생성하기</string>
    <string-array name="create_group_category_items">
        <item>✈️ 여행</item>
        <item>🍽️ 식사</item>
        <item>🛒 쇼핑</item>
        <item>⚽ 스포츠/운동</item>
        <item>🍻 회식</item>
        <item>🗂️ 기타</item>
    </string-array>
    <string name="create_group_empty_info">모임 정보를 모두 완성해주세요.</string>
    <string name="create_group_fail_create">모임 생성에 실패했어요. 나중에 다시 시도해주세요.</string>
    <string name="send_invite_message_fail">초대 메시지 전송에 실패했어요.</string>
</resources>
