<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.kappzzang.jeongsan.creategroup.CreateGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_base"
        android:clipToPadding="false"
        android:padding="@dimen/all_layout_padding"
        tools:context=".CreateGroupActivity">

        <TextView
            android:id="@+id/page_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_title"
            android:textSize="@dimen/all_header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/page_description_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_description"
            android:textSize="@dimen/all_sub_header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/page_title_textview"
            app:layout_constraintTop_toBottomOf="@id/page_title_textview" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/all_background_frame"
            android:elevation="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@id/page_title_textview"
            app:layout_constraintTop_toBottomOf="@id/page_description_textview">

            <TextView
                android:id="@+id/group_name_menu_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_group_name_menu"
                android:textSize="@dimen/create_group_menu_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/group_name_value_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@null"
                android:text="@={viewModel.groupName}"
                android:hint="@string/create_group_name_value"
                app:layout_constraintBottom_toBottomOf="@id/group_name_menu_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/group_name_menu_textview"
                app:layout_constraintTop_toTopOf="@id/group_name_menu_textview" />

            <TextView
                android:id="@+id/group_category_menu_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_group_category_menu"
                android:textSize="@dimen/create_group_menu_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/group_name_menu_textview" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/group_category_content_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/group_category_menu_textview"
                app:layout_constraintStart_toStartOf="@id/group_name_value_edittext"
                app:layout_constraintTop_toTopOf="@id/group_category_menu_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/member_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/all_background_frame"
            android:elevation="@dimen/all_container_elevation"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/create_group_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_info_layout">

            <TextView
                android:id="@+id/member_menu_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_group_member_menu"
                android:textSize="@dimen/create_group_menu_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_member_button"
                android:layout_width="@dimen/create_group_add_button_width"
                android:layout_height="0dp"
                android:background="@drawable/all_background_button"
                android:gravity="center"
                android:text="@string/create_group_add_button"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/member_menu_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/member_menu_textview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/member_content_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_member_button"
                tools:listitem="@layout/item_member_invite" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_group_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_bottom_button_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/all_background_button"
            android:gravity="center"
            android:text="@string/create_group_button"
            android:textColor="@color/white"
            android:textSize="@dimen/all_bottom_button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/member_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
